--- a/wiki/articles/1.md
+++ b/wiki/articles/1.md
@@ -1,4 +1,4 @@
-# Welcome to DSS wiki
+# My first wiki
 
 <img src="/static/dataiku/images/dss-logo-about.png" width="70" style="float: right; margin-right: 30px" />
 
